--- a/.github/workflows/release-nuget.yml
+++ b/.github/workflows/release-nuget.yml
@@ -23,7 +23,7 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Install .NET MAUI Workload
-        run: dotnet workload restore samples\Plugin.Maui.Workarounds.MacCatalyst.Sample.sln
+        run: dotnet workload restore samples\Plugin.Maui.Workarounds.MacCatalyst.Sample.slnx
 
       - name: Verify commit exists in origin/main
         run: |
@@ -35,7 +35,7 @@ jobs:
           $version="${{github.ref_name}}".TrimStart("v")
           "version-without-v=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
       - name: Pack
-        run: dotnet pack src\Plugin.Maui.Workarounds.MacCatalyst.sln -c Release -p:PackageVersion=${{ steps.get_version.outputs.version-without-v }}
+        run: dotnet pack src\Plugin.Maui.Workarounds.MacCatalyst.slnx -c Release -p:PackageVersion=${{ steps.get_version.outputs.version-without-v }}
       - name: Push
         run: dotnet nuget push src\Plugin.Maui.Workarounds.MacCatalyst\bin\Release\Plugin.Maui.Workarounds.MacCatalyst.${{ steps.get_version.outputs.version-without-v }}.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
         env:
