--- a/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/Plugin.Maui.Workarounds.MacCatalyst.Sample.csproj
+++ b/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/Plugin.Maui.Workarounds.MacCatalyst.Sample.csproj
@@ -1,10 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
-		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-		<!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
+		<TargetFrameworks>net9.0-maccatalyst</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<RootNamespace>Plugin.Maui.Workarounds.MacCatalyst.Sample</RootNamespace>
 		<UseMaui>true</UseMaui>
