Consume binding through MAUI project

--- a/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/Plugin.Maui.Workarounds.MacCatalyst.Sample.csproj
+++ b/samples/Plugin.Maui.Workarounds.MacCatalyst.Sample/Plugin.Maui.Workarounds.MacCatalyst.Sample.csproj
@@ -45,8 +45,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- <ProjectReference Include="..\..\src\Plugin.Maui.Workarounds.MacCatalyst\Plugin.Maui.Workarounds.MacCatalyst.csproj" /> -->
-		<ProjectReference Include="..\..\macios\Plugin.Maui.Workarounds.MacCatalyst.Binding\Plugin.Maui.Workarounds.MacCatalyst.Binding.csproj" />
+		<ProjectReference Include="..\..\src\Plugin.Maui.Workarounds.MacCatalyst\Plugin.Maui.Workarounds.MacCatalyst.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
