--- a/.github/workflows/release-nuget.yml
+++ b/.github/workflows/release-nuget.yml
@@ -4,7 +4,8 @@ on:
   push:
     tags:
     - "v[0-9]+.[0-9]+.[0-9]+"
-    - "v[0-9]+.[0-9]+.[0-9]+-preview[0-9]+"
+    - "v[0-9]+.[0-9]+.[0-9]+-preview.[0-9]+"
+    - "v[0-9]+.[0-9]+.[0-9]+-experimental.[0-9]+"
 
 env:
   DOTNET_VERSION: '9.0.x' # The .NET SDK version to use
