--- a/.github/workflows/release-nuget.yml
+++ b/.github/workflows/release-nuget.yml
@@ -26,17 +26,20 @@ jobs:
       - name: Install .NET MAUI Workload
         run: dotnet workload restore samples\Plugin.Maui.Workarounds.MacCatalyst.Sample.slnx
 
-      - name: Verify commit exists in origin/main
-        run: |
-          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
-          git branch --remote --contains | grep origin/main
+      # - name: Verify commit exists in origin/main
+      #   run: |
+      #     git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
+      #     git branch --remote --contains | grep origin/main
+
       - name: Get version information from tag
         id: get_version
         run: |
           $version="${{github.ref_name}}".TrimStart("v")
           "version-without-v=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+
       - name: Pack
         run: dotnet pack src\Plugin.Maui.Workarounds.MacCatalyst.slnx -c Release -p:PackageVersion=${{ steps.get_version.outputs.version-without-v }}
+
       - name: Push
         run: |
           dotnet nuget push macios\Plugin.Maui.Workarounds.MacCatalyst.Binding\bin\Release\Plugin.Maui.Workarounds.MacCatalyst.Binding.${{ steps.get_version.outputs.version-without-v }}.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
